# SE_Cerberus_project

./: .gitignore  .mailmap  README.md  compose.yaml
backend/: .gitignore  Cargo.toml  Dockerfile  error_logs.csv  init.sql
backend/src/: db.rs  image_processor.rs  logger.rs  main.rs  models.rs  routes.rs
frontend/: .dockerignore  Dockerfile  nginx.conf
frontend/src/: App.css  App.js
frontend/src/components/: AddEmployeeModal.js  EmployeeTable.js  LogTable.js  Login.js
station/: Dockerfile  Dockerfile-station  api_doc.md  docker-compose.yaml  requirements.txt
station/app/: api.py  camera.py  controller.py  controller.py.bak  gui.py  main.py  main.py.bak  station_secrets.py
station/utils/: detect_cameras.py  station_setup.py  template_compose.yaml
