[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
env_logger = "0.11"
dotenvy = "0.15"
home = "=0.5.9" # dk if I still need to pin this
