[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
env_logger = "0.11"
dotenvy = "0.15"
home = "=0.5.9"
actix-multipart = "0.6"
image = "0.24"
ndarray = "0.15"
onnxruntime = { version = "0.0.14", features = ["model-fetching"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1.89"
mockall = "0.14.0"

[dev-dependencies]
mockall = "0.14.0"
